# lean-mcp-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md
docs/architecture/: README.md
docs/configuration/: README.md
docs/tool_catalog/: README.md  tool_reference.md
docs/usage/: README.md
src/lean_mcp_toolkit/: __init__.py  runtime.py  tool_audit.py  tool_views.py
src/lean_mcp_toolkit/adapters/: __init__.py
src/lean_mcp_toolkit/app/: __init__.py  cli.py  cli_catalog.py  cli_config_store.py  cli_invoker.py  cli_output.py  cli_parser.py  cli_payload.py  cli_shared.py  (+7 more)
tests/: test_tool_views.py
tests/app/: test_app_cli.py  test_cli_config_store.py  test_cli_shared.py  test_client_cli.py  test_runtime.py  test_service_factory.py  test_tool_audit.py  test_toolkit_http_client_plugins.py  test_toolkit_server_debug_backends.py  test_toolkit_server_plugins.py  test_toolkit_wrappers.py  test_warmup_runner.py
tests/backends/: test_command_runtime.py  test_lean_explore_backend.py  test_lean_explore_base.py  test_lsp_client_manager.py  test_project_root_resolver.py
tests/config/: test_config_loader.py
tests/contracts/: test_declarations_contracts.py  test_diagnostics_contracts.py  test_lsp_assist_contracts.py  test_lsp_core_contracts.py  test_lsp_heavy_contracts.py  test_mathlib_nav_contracts.py  test_proof_search_alt_contracts.py  test_search_alt_contracts.py  test_search_core_contracts.py  test_search_nav_contracts.py
tests/integration/: test_lsp_cleanup_integration.py  test_real_diagnostics_scenarios.py
tests/transport/: test_http_config.py
(+255 files in other folders)
