[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lean-mcp-toolkit"
version = "0.1.0"
description = "Unified Lean tool server with MCP, HTTP API, remote CLI, and configurable backends"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "IIIS Lean" }
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = []

[project.optional-dependencies]
server = [
  "mcp>=1.0.0",
  "fastapi>=0.110.0",
  "starlette>=0.37.0",
  "PyYAML>=6.0",
  "uvicorn>=0.29.0"
]

[project.scripts]
lean-mcp-toolkit = "lean_mcp_toolkit.app.cli:main"
lean-cli-toolkit = "lean_mcp_toolkit.app.client_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
